--- a/style/style.css
+++ b/style/style.css
@@ -9,16 +9,18 @@ body {
 
 header {
     min-height: 300px;
-    background: blue;
     color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background: url('/assets/banner.jpeg');
     background-size: cover;
     background-position: center;
     position: relative;
+}
+
+.home-page header,  .new-post-page header {
+    background: url('/assets/banner.jpeg');
 }
 
 header::after {
@@ -44,7 +46,8 @@ header >* {
     background-size: cover;
 }
 
-.profile-name {
+
+.profile-name, .title {
     font-size: 60px;
     font-weight: bold;
 }
@@ -80,6 +83,10 @@ header >* {
     transform: translate3d(0, -5px, 0);
     box-shadow: 0 2rem 5rem 0 rgba(0,0,0,.1);
     cursor: pointer;
+}
+
+.post-link {
+    text-decoration: none;
 }
 
 .post-image {
